[package]
name = "bevy_la_mesa"
version = "0.15.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Build card games with Bevy"
keywords = ["cards", "tabletop", "bevy"]
repository = "https://github.com/stillonearth/bevy_la_mesa"

[dependencies]
bevy = "0.15"
bevy_asset_loader = "0.22"
bevy_defer = "0.13"
bevy_tweening = "0.12"
rand = "0.8.5"

[dev-dependencies]
bevy-inspector-egui = "0.29.0"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
