[package]
name = "bevy_la_mesa"
version = "0.17.0-rc1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Build card games with Bevy"
keywords = ["cards", "tabletop", "bevy"]
repository = "https://github.com/stillonearth/bevy_la_mesa"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_picking",
    "tonemapping_luts",
    "bevy_mesh_picking_backend",
    "std",
    "animation",
    "default_font",
    "jpeg",
    "multi_threaded",
    "png",
    "serialize",
    "wayland",
    "web",
    "x11",
    "zstd_rust"
] }
bevy_asset_loader = "0.24.0-rc.1"
bevy_defer = "0.15"
bevy_tweening = "0.14"
rand = "0.8.5"

[dev-dependencies]
bevy-inspector-egui = "0.34.0"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
